Simplifique fluxos de subprocesso e ajuste testes de cobertura